# OPP_lab5

./: .gitignore  CMakeLists.txt  main.cpp
include/: DynamicArray.h  MemoryResource.h  Person.h
src/: MemoryResource.cpp
test/: test.cpp
